# py_machine_config

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
py_machine_config/: __init__.py  cli.py
py_machine_config/commands/: .command.py.swp  command.py
tests/: __init__.py  test_py_machine_config.py
tests/sample_data/: blink_build.machine
